--- a/styles/globals.css
+++ b/styles/globals.css
@@ -24,3 +24,36 @@ a {
     background: black;
   }
 }
+
+/* Hide scrollbar for Chrome, Safari and Opera */
+.hide-scrollbar::-webkit-scrollbar {
+  display: none;
+}
+
+/* Hide scrollbar for IE, Edge and Firefox */
+.hide-scrollbar {
+  -ms-overflow-style: none; /* IE and Edge */
+  scrollbar-width: none; /* Firefox */
+}
+
+.custom-scroolbar::-webkit-scrollbar {
+  margin-top: 10px;
+  height: 10px;
+  width: 5px;
+}
+
+/* Track */
+.custom-scroolbar::-webkit-scrollbar-track {
+  background: #f2f2f2;
+}
+
+/* Handle */
+.custom-scroolbar::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background: #BCBCBC;
+}
+
+/* Handle on hover */
+.custom-scroolbar::-webkit-scrollbar-thumb:hover {
+  background: #BCBCBC;
+}
